--- a/views/article/article_home.hbs
+++ b/views/article/article_home.hbs
@@ -48,7 +48,7 @@
         ->
       </a>
 </div>
-<a href="article/add">
+<a href="/article/add">
   <br>
   <br>
   <div class="ui button blue">Add Article</div>
