--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -26,10 +26,10 @@
     <div class="ui bottom attached segment pushable">
       {{> sidebar}}
       <div class="pusher" style="left: 3%;">
-        <div class="ui basic segment">
-
+        <div class="ui container" style="margin:0 !important;">
+<br><br>
           {{{body}}}
-
+<br><br>
         </div>
       </div>
     </div>
