--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -47,9 +47,17 @@
   <a class="item" href="/article">
     Article
   </a>
-   <a class="item" href="/design/view">
+   <a class="item" href="/design/add">
     Design
   </a>
+   <a class="item" href="/design/view">
+    Design View
+  </a>
+   <a class="item" style="background-color: red;" href="/design/sample">
+    REGISTER DESIGN SAMPLE
+  </a>
+
+
    <a class="item">
     5
   </a>
