--- a/views/partials/design/design_form_option.hbs
+++ b/views/partials/design/design_form_option.hbs
@@ -55,7 +55,7 @@
     <div class="field">
       <label for="">필수 옵션인가요?</label>
       <div class="ui checked huge checkbox">
-        <input type="checkbox" checked="">
+        <input data-item="${newOptionNo}" class="ui search dropdown" name="isrequired" type="checkbox" checked="">
         <label></label>
       </div>
     </div>
