--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -51,10 +51,10 @@
     Design
   </a>
    <a class="item" href="/design/view">
-    Design View
+    마지막으로 등록한 디자인 보기
   </a>
    <a class="item" style="background-color: red;" href="/design/sample">
-    REGISTER DESIGN SAMPLE
+    REGISTER TEST SAMPLE
   </a>
 
 
