--- a/views/design/design_home.hbs
+++ b/views/design/design_home.hbs
@@ -31,8 +31,8 @@
 <br><br>
 <script>
 
-  const optionsLimit = 5;
-  const suboptionsLimit = 5;
+  const optionsLimit = 4;
+  const suboptionsLimit = 4;
   const subOptionCountArr = [];
   let thisOptionNo = 0;
   let newOptionNo = 0;
@@ -101,7 +101,7 @@
     console.log(newOptionNo);
     if (newOptionNo > optionsLimit) {
       newOptionNo = optionsLimit
-      return alert(`${newOptionNo} only!`);
+      return alert(`5 only!`);
     }
     const html = `{{> design/design_form_option}}`;
     $('#option').append(html)
@@ -222,7 +222,7 @@
 
     if (thisSubOptionNo > suboptionsLimit) {
       subOptionCountArr[thisOptionNo] = suboptionsLimit;
-      return alert(`${suboptionsLimit} only!`);
+      return alert(`5 only!`);
     }
     const html = `{{> design/design_form_suboption}}`;
 
